# bose_soundbar_volume_display

./: Dockerfile  LICENSE  README.md  pyproject.toml  shortcut.desktop  vc  volume_ctrl.py
app/: displays.py  logging.py  logging_tools.py  volume_ctrl.py
docker/: DOCKERFILE  Dockerfile  Dockerfile_app  Dockerfile_logserver  Dockerfile_poetry
logserver/: docker-compose.yaml  logserver.py
